# tree-sitter-cli-via-rust

./: .gitmodules  Cargo.toml  README.md
src/: graphviz.rs  languages.rs  main.rs
src/tests/: mod.rs  test_graphviz.rs  test_languages.rs
