[package]
name = "tree-sitter-cli-via-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tree-sitter = "0.25.2"
tree-sitter-bash = "0.23.3"
tree-sitter-java = "0.23.5"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.23.2"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
# use main since the current version released on cargo requires an older version of tree-sitter
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin.git", branch = "main" }
tree-sitter-dockerfile = { git = "https://github.com/Dima-369/tree-sitter-dockerfile", branch = "main" }
